--- a/src/styles/Published.module.css
+++ b/src/styles/Published.module.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     grid-column: 1 / -1;
+    justify-self: flex-start;
 }
 
 .bodyContainer ul {
@@ -18,7 +19,7 @@
     flex-direction: column;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 900px) {
     .publishedContainer {
         max-width: 100%;
     }
